--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
  color: white;
 }
 
-input{
+input, select{
   display: block;     /* makes the input take a full line */
   margin: 0 auto;     /* centers it horizontally */
   margin-bottom: 5px;
@@ -66,7 +66,6 @@ p{
     word-wrap: break-word;
     line-height: 35px;
     margin: 30px 0;
-    opacity: 0;
 
 }
 .fade{
